# Pep-eTripbot

./: .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  test.py
src/tg_bot/: config.py  db.py  extras.py  main.py
src/tg_bot/dialogs/: getters.py  switches.py
src/tg_bot/dialogs/admin/: dialog.py
src/tg_bot/dialogs/auth/: dialog.py
src/tg_bot/dialogs/common/: dialog.py
src/tg_bot/dialogs/config/: dialog.py
src/tg_bot/dialogs/core/: dialog.py
src/tg_bot/handlers/: admin.py  auth.py  common.py  config.py  core.py
src/tg_bot/i18n/: custom_widgets.py
src/tg_bot/i18n/locales/en/: _default.ftl
src/tg_bot/i18n/locales/ru/: _default.ftl
src/tg_bot/lexicon/: admin.py  auth.py  core.py  getters.py
src/tg_bot/middleware/: db_middleware.py  locale_manager.py  role_middleware.py  throttling_middleware.py
src/tg_bot/models/: reward.py
src/tg_bot/services/: repository.py
src/tg_bot/services/repositories/: channel_repo.py  reward_repo.py  user_get_repo.py  user_post_repo.py  user_update_repo.py
src/tg_bot/states/: states.py
